--- a/Repositorio-de-JavaScript/Exercio-para-Aula1.HTML
+++ b/Repositorio-de-JavaScript/Exercio-para-Aula1.HTML
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>prineiro-js</title>
+    <title>primeiro-js</title>
+    <style>
+        body {
+            background-color: mediumaquamarine;
+            color: aliceblue;
+            font: Arial 20pt, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>ainda VOou ter que aprender a usar o JS</h1>
+    <P>MAIS JA ESTOU APRENDENDO</P>
+    <script>
+        window.alert("Você concorda com migo");
+        window.confirm("Você concorda com migo");
+        window.prompt("se nao diga o porque");
+    </script>
 </body>
 </html>
