--- a/Repositorio-de-JavaScript/Exercicio-para-a-Aula4.HTML
+++ b/Repositorio-de-JavaScript/Exercicio-para-a-Aula4.HTML
@@ -19,9 +19,9 @@
 
         var nome = window.prompt("Qual é o seu nome?");
         document.write(`É um prazer te conhecer, ${nome}! <br/>`);
-        document.write(` O seu nome tem ${nome} tem ${nome.length} lentras <br/>`);
-        document.write(` o seu nome em MAIUSCULO é: ${nome.toupperCase()} <br/>`);
-        document.write(` O seu nome em Minuscula é: ${nome.tolowerCase()} <br/>`);
+        document.write(`O seu nome tem ${nome} tem ${nome.length} lentras <br/>`);
+        document.write(`o seu nome em MAIUSCULO é: ${nome.toupperCase()} <br/>`);
+        document.write(`O seu nome em Minuscula é: ${nome.toLowerCase()} <br/>`);
         
     </script>
 </body>
