--- a/Repositorio-de-JavaScript/Exercicio-para-a-Aula5.HTML
+++ b/Repositorio-de-JavaScript/Exercicio-para-a-Aula5.HTML
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiros passos no DOM</title>
+    <style>
+        body {
+            background-color : black;
+            color :whitesmoke;
+            font : Arial 20pt;
+        }
+    </style>
 
 </head>
 <body>
 
     <h1>primeiro passo no DOM</h1>
+    <p>Aqui vai o Resultado</p>
+    
+    <p>APrendendo usar o <strong>DOM</strong> em JavaScrip.</p>
+    <div>Clique em min</div>
 
+    <script>
+
+    </script>
 </body>
 </html>
