--- a/ex13/Exercicio-para-a-Aula13.html
+++ b/ex13/Exercicio-para-a-Aula13.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercicio</title>
+    <title>Regoligio do Dia</title>
     <link rel="stylesheet" href="eslilo.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>Titulo</h1>
+        <h1>Hora do dia</h1>
     </header>
     <section>
-        <div>
+        <div id="msg">
             Testando......
         </div>
-        <div>
-            olokinho meu!!!
+        <div id="foto">
+            <img id="images" src="manha.png" alt="foto do dia">
         </div>
     </section>
     <footer>
